[package]
name = "api-zhongli"
version = "0.1.0"
edition = "2021"
authors = ["ZhongLi Shen <germanysoftwareengineer@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7.1", features = ['http', 'axum'] }
worker-macros = { version = "0.7.1", features = ['http'] }
axum = { version = "0.8.7", default-features = false, features = ["json", "query"] }
tower-service = "0.3.3"
tower-http = { version="0.6.8",features=['cors'] }
serde = { version = "1.0.228", features = ["derive"] }
